Updated the put and patch to accept json data in file
